--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,24 @@
-// Начните писать стили здесь
+//common
+@import "./blocks/page-body.less";
+@import "./blocks/main-header.less";
+@import "./blocks/main-nav.less";
+@import "./blocks/visually-hidden.less";
+@import "./blocks/partnership.less";
+@import "./blocks/page-footer.less";
+@import "./blocks/button.less";
+//index
+@import "./blocks/main.less";
+@import "./blocks/intro.less";
+@import "./blocks/page.less";
+@import "./blocks/programs.less";
+@import "./blocks/stats.less";
+//form
+@import "./blocks/form.less";
+@import "./blocks/radios.less";
+@import "./blocks/checkboxes.less";
+//catalog
+@import "./blocks/catalog.less";
+@import "./blocks/products.less";
+@import "./blocks/products-extra.less";
+@import "./blocks/promotion.less";
+
