--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 //common
+@import "./fonts.less";
 @import "./blocks/page-body.less";
-@import "./blocks/main-header.less";
+@import "./blocks/header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/visually-hidden.less";
 @import "./blocks/partnership.less";
@@ -11,6 +12,8 @@
 @import "./blocks/intro.less";
 @import "./blocks/page.less";
 @import "./blocks/programs.less";
+@import "./blocks/advantages.less";
+@import "./blocks/examples.less";
 @import "./blocks/stats.less";
 //form
 @import "./blocks/form.less";
