--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -37,7 +37,7 @@
   margin: 0;
 }
 
-.form__list li{
+.form__list li {
   display: flex;
   align-items: center;
 }
@@ -49,7 +49,7 @@
 }
 // FIRST SECTION
 .form__field-group--pet {
-  padding-bottom:24px;
+  padding-bottom: 24px;
 }
 
 .form__field-group--pet li:not(:last-child) {
@@ -74,10 +74,10 @@
   width: 100%;
 }
 
-.form__pet-input::-webkit-outer-spin-button,
-.form__pet-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
+// .form__pet-input::-webkit-outer-spin-button,
+// .form__pet-input::-webkit-inner-spin-button {
+//   -webkit-appearance: none;
+// }
 
 // SECOND SECTION (radios)
 .form__field-group--radios {
@@ -118,7 +118,7 @@
   height: 13px;
   border-radius: 50%;
   position: absolute;
-  background-color: #68B738;
+  background-color: #68b738;
   left: 9px;
   bottom: 3px;
   opacity: 0;
@@ -176,7 +176,6 @@
 
 .form__textarea {
   box-sizing: border-box;
-  height: 45px;
   padding: 9px 15px;
   font-family: "Oswald Regular", sans-serif;
   font-weight: 400;
@@ -215,7 +214,7 @@
   position: relative;
 }
 
-.checkboxes__input + .checkboxes__label:before {
+.checkboxes__input + .checkboxes__label::before {
   content: "";
   width: 30px;
   height: 30px;
