--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,8 +1,7 @@
 @white: #ffffff;
 
 .intro {
-  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-                    url("../img/intro-bg-img.jpg");
+  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg-img.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
