--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,7 +6,7 @@
   width: 320px;
   background-color: @white;
   top: 65px;
-  border-top: 1px solid #E6E6E6;
+  border-top: 1px solid #e6e6e6;
 }
 
 .main-nav__list {
