--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 26px 20px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .partnership__title {
