--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -3,8 +3,7 @@
 }
 
 .promotion__description {
-  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-                    url("../img/promotion_bg_img.jpg");
+  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promotion_bg_img.jpg");
   background-position: center;
   background-size: 100% 100%;
   background-repeat: no-repeat;
