BEM infrastructure fixies

--- a/source/less/blocks/examples.less
+++ b/source/less/blocks/examples.less
@@ -20,3 +20,14 @@
   margin: 0;
   padding-bottom: 20px;
 }
+
+.examples__spent-amount {
+  margin: 0;
+  font-family: "Oswald Regular", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 20px;
+}
