--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,24 +1,24 @@
 //common
 @import "./fonts.less";
-@import "./blocks/page-body.less";
+@import "./blocks/page.less";
 @import "./blocks/header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/visually-hidden.less";
 @import "./blocks/partnership.less";
 @import "./blocks/page-footer.less";
 @import "./blocks/button.less";
+@import "./blocks/radios.less";
+@import "./blocks/checkboxes.less";
 //index
-@import "./blocks/main.less";
 @import "./blocks/intro.less";
-@import "./blocks/page.less";
 @import "./blocks/programs.less";
 @import "./blocks/advantages.less";
 @import "./blocks/examples.less";
 @import "./blocks/stats.less";
 //form
 @import "./blocks/form.less";
-@import "./blocks/radios.less";
-@import "./blocks/checkboxes.less";
+@import "./blocks/form-page.less";
+@import "./blocks/program-form.less";
 //catalog
 @import "./blocks/catalog.less";
 @import "./blocks/products.less";
