--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -11,6 +11,12 @@
   padding: 13px 0 19px 0;
 }
 
+.products-extra__list {
+  margin: 0;
+  padding: 0 20px;
+  list-style-type: none;
+}
+
 .products-extra__title {
   font-family: "Oswald Regular", sans-serif;
   font-weight: 400;
@@ -32,4 +38,10 @@
   font-size: 14px;
   line-height: 14px;
   margin: 0;
+}
+
+.products-extra__order-button {
+  font-size: 16px;
+  line-height: 20px;
+  padding: 10px 109px;
 }
