--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -1,5 +1,4 @@
-.products__list,
-.products-extra__list {
+.products__list {
   margin: 0;
   padding: 0 20px;
   list-style-type: none;
@@ -54,8 +53,7 @@
   margin: 0;
 }
 
-.products__order-button,
-.products-extra__order-button {
+.products__order-button {
   font-size: 16px;
   line-height: 20px;
   padding: 10px 109px;
