--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -28,3 +28,42 @@
   margin: 0;
   padding-left: 80px;
 }
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    padding: 30px;
+  }
+
+  .advantages__title {
+    font-size: 60px;
+    line-height: 60px;
+    padding-bottom: 32px;
+  }
+
+  .advantages__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .advantages__description {
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages {
+    padding: 0 110px 68px;
+  }
+
+  .advantages__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .advantages__item {
+    padding: 151px 0 57px 0;
+  }
+}
