--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -10,3 +10,22 @@
   font-weight: 400;
   border: none;
 }
+
+@media (min-width: @tablet-width) {
+  .catalog {
+    padding: 0 30px;
+  }
+
+  .catalog__title {
+    font-size: 60px;
+    line-height: 60px;
+    margin: 0;
+    padding: 10px 0 82px 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog {
+    padding: 0 110px;
+  }
+}
