--- a/source/less/blocks/form-page.less
+++ b/source/less/blocks/form-page.less
@@ -5,3 +5,22 @@
   line-height: 36px;
   font-weight: 400;
 }
+
+@media (min-width: @tablet-width) {
+  .form-page__title {
+    padding: 20px 69px 54px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-page {
+    margin: 0 auto 0 auto;
+    // width: 90%;
+  }
+
+  .form-page__title {
+    padding: 20px 110px 56px;
+  }
+}
