--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -158,3 +158,266 @@
   padding: 21px 0 32px;
   text-align: center;
 }
+
+
+@media (min-width: @tablet-width) {
+  .form__title {
+    font-size: 36px;
+    line-height: 36px;
+    padding-bottom: 76px;
+  }
+
+  .form__description {
+    padding: 0 70px 66px;
+    font-size: 20px;
+    line-height: 30px;
+    width: 323px;
+  }
+
+  .form__list label {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .form__pet-input {
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    border: 1px solid #e7e7e7;
+  }
+
+  .form__field-group--pet li:not(:last-child) {
+    padding-bottom: 20px;
+  }
+
+  .form__field-group--pet {
+    padding: 0 0 72px 0;
+  }
+
+  .form__list--wrapper {
+    border: 1px solid #e7e7e7;
+    padding: 25px 28px;
+  }
+
+  .form__field-group--radios {
+    padding: 0 0 49px 0;
+  }
+
+  .form__field-group--email-tel .form__title {
+    padding: 26px 0 76px;
+  }
+
+  .form__field-group--email-tel {
+    padding-bottom: 76px;
+  }
+
+  .form__mail-label {
+    width: 75px;
+  }
+
+  .form__mail-input,
+  .form__tel-input {
+  box-sizing: border-box;
+  height: 52px;
+  padding: 11px 20px;
+  font-size: 20px;
+  line-height: 30px;
+  color: #444444;
+  border: 1px solid #cdcdcd;
+  }
+
+  .form__field-group--email-tel li:not(:last-child) {
+  padding-bottom: 20px;
+  }
+
+  .form__field-group--comment {
+    padding-bottom: 76px;
+  }
+
+  .form__field-group--comment .form__title {
+    padding-bottom: 76px;
+  }
+
+  .form__textarea {
+    padding: 10px 19px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #e7e7e7;
+    height: 174px;
+  }
+
+  .form__field-group--checkboxes .form__title {
+    padding-bottom: 62px;
+  }
+
+  .form__field-group--checkboxes .form__list {
+    display: grid;
+    grid-template-columns: 221px 221px;
+    column-gap: 123px;
+    row-gap: 32px;
+  }
+
+  .form__submit-button {
+    width: 282px;
+    height: 52px;
+    padding: 13px 45px;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right:64px;
+  }
+
+  .form__reqired-wrapper {
+    display: flex;
+    padding-bottom: 72px;
+  }
+
+  .form__reqired-wrapper p {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__title {
+    padding-bottom: 110px;
+  }
+
+  .form__description {
+    padding: 0 110px 66px;
+    width: 323px;
+  }
+
+  .form__pet-input {
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    border: 1px solid #e7e7e7;
+  }
+
+  .form__field-group--pet li:not(:last-child) {
+    padding-bottom: 20px;
+  }
+
+  .form__field-group--pet {
+    padding: 0;
+  }
+
+  .form__list--wrapper {
+    border: 1px solid #e7e7e7;
+    padding: 25px 28px;
+  }
+
+  .form__field-group--radios {
+    padding: 0;
+  }
+
+  .form__field-group--email-tel .form__title {
+    padding: 26px 0 76px;
+  }
+
+  .form__field-group--email-tel {
+    padding-bottom: 76px;
+  }
+
+  .form__mail-label {
+    width: 75px;
+  }
+
+  .form__mail-input,
+  .form__tel-input {
+    box-sizing: border-box;
+    height: 52px;
+    padding: 11px 20px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #cdcdcd;
+  }
+
+  .form__field-group--email-tel li:not(:last-child) {
+    padding-bottom: 20px;
+  }
+
+  .form__field-group--comment {
+    padding-bottom: 76px;
+  }
+
+  .form__field-group--comment .form__title {
+    padding-bottom: 76px;
+  }
+
+  .form__textarea {
+    padding: 10px 19px;
+    font-size: 20px;
+    line-height: 30px;
+    color: #444444;
+    border: 1px solid #e7e7e7;
+    height: 174px;
+  }
+
+  .form__field-group--checkboxes .form__title {
+    padding-bottom: 62px;
+  }
+
+  .form__field-group--checkboxes .form__list {
+    display: grid;
+    grid-template-columns: 221px 221px;
+    column-gap: 123px;
+    row-gap: 32px;
+  }
+
+  .form__submit-button {
+    width: 282px;
+    height: 52px;
+    padding: 13px 45px;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right:64px;
+  }
+
+  .form__reqired-wrapper {
+    display: flex;
+    padding-bottom: 72px;
+  }
+
+  .form__reqired-wrapper p {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .form__field-group--email-tel .form__list {
+    display: grid;
+    grid-template-columns: 570px 570px;
+    column-gap: 78px;
+    align-items: center;
+  }
+
+  .form__field-group--email-tel li:first-child {
+    padding: 0;
+  }
+
+  .form__field-group--checkboxes .form__list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .form__field-group--checkboxes li:not(:last-child) {
+    padding: 0;
+  }
+
+  .form__field-group--checkboxes {
+    padding-bottom: 61px;
+  }
+
+  .form__submit-button {
+    width: 568px;
+    height: 52px;
+    padding: 13px 188px;
+    margin-right: 84px;
+  }
+}
+
