--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,5 +1,22 @@
 .page__body {
   background-color: #ffffff;
   margin: 0;
-  width: 320px;
+}
+
+@media (min-width: @mobile-width-only) {
+  .page__body {
+    margin: 0 auto 0 auto;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .page__body {
+    margin: 0 auto 0 auto;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page__body {
+    margin: 0 auto 0 auto;
+  }
 }
