--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -13,6 +13,8 @@
   font-size: 16px;
   line-height: 20px;
   padding-right: 2px;
+  width: 100%;
+  text-transform: uppercase;
 }
 
 .partnership__adress {
@@ -21,8 +23,55 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+  width: 100%;
 }
 
 .partnership__adress-img {
   background-color: #7a7a7a;
+  width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+  .partnership__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 60px 40px 56px;
+    background-color: #f2f2f2;
+  }
+
+  .partnership__title {
+    font-size: 20px;
+    line-height: 26px;
+    width: 172px;
+  }
+
+  .partnership__adress {
+    font-size: 16px;
+    line-height: 20px;
+    width: 160px;
+    text-align: end;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .partnership {
+    position: relative;
+  }
+
+  .partnership__wrapper {
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    padding: 60px 80px 56px;
+  }
+
+  .partnership__title {
+    padding-right: 87px;
+  }
+
+  .partnership__adress {
+    width: 102px;
+    text-align: start;
+  }
 }
