--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -4,7 +4,7 @@
   font-size: 24px;
   line-height: 24px;
   margin: 0;
-  padding: 25px 20px 36px;
+  padding: 25px 0 36px;
 }
 
 .products-extra__card {
@@ -13,7 +13,7 @@
 
 .products-extra__list {
   margin: 0;
-  padding: 0 20px;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -24,6 +24,7 @@
   line-height: 16px;
   padding-bottom: 13px;
   margin: 0;
+  text-transform: uppercase;
 }
 
 .products-extra__description {
@@ -44,4 +45,122 @@
   font-size: 16px;
   line-height: 20px;
   padding: 10px 109px;
+}
+
+@media (min-width: 320px) {
+  .products-extra__list {
+    padding: 0 auto 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .products-extra__main-title {
+    font-size: 36px;
+    line-height: 36px;
+    padding: 0 37px 80px;
+  }
+
+  .products-extra__list {
+    margin: 0;
+    padding: 0;
+  }
+
+  .products-extra__card {
+    box-sizing: border-box;
+    width: 708px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 26px 37px 28px 37px;
+  }
+
+  .products-extra__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .products-extra__title {
+    font-size: 20px;
+    line-height: 20px;
+    padding-bottom: 25px;
+  }
+
+  .products-extra__description {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 15px;
+  }
+
+  .products-extra__description p:first-child {
+    padding-right: 49px;
+  }
+
+  .products-extra__card p {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .products-extra__order-button {
+    width: 632px;
+    font-size: 16px;
+    line-height: 20px;
+    padding: 10px 109px;
+    margin: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .products-extra {
+    padding-bottom: 86px;
+  }
+
+  .products-extra__wrapper--desktop {
+    display: grid;
+    grid-template-columns: 895px 245px;
+    column-gap: 80px;
+  }
+
+  .products-extra__list {
+    margin: 0;
+    padding: 0;
+    display: block;
+  }
+
+  .products-extra__description {
+    padding-bottom: 0;
+    padding-right: 40px;
+  }
+
+  .products-extra__title {
+    padding-bottom: 0;
+  }
+
+  .products-extra__main-title {
+    font-size: 36px;
+    line-height: 36px;
+    padding: 0 0 81px;
+  }
+
+  .products-extra__card {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0 17px 0;
+  }
+
+  .products-extra__wrapper {
+    display: flex;
+  }
+
+  .products-extra__order-button {
+    width: 244px;
+    padding: 10px 26px;
+  }
 }
