--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -1,3 +1,24 @@
 .program-form {
   padding: 0 20px;
 }
+
+@media (min-width: @tablet-width) {
+  .program-form {
+    padding: 0 67px 0 71px;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .program-form {
+    padding: 0 110px;
+  }
+
+  .program-form__wrapper {
+    display: grid;
+    grid-template-columns: 570px 570px;
+    column-gap: 80px;
+    padding-bottom: 43px;
+  }
+}
+
