--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -1,19 +1,67 @@
 .promotion {
-  padding: 35px 20px;
+  padding: 35px 0;
+}
+
+.promotion__block {
+  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.90), rgba(104, 183, 56, 0.90)), url("../img/promotion_bg_img.jpg");
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: #5f5f5f;
+  padding: 186px 61px 43px 58px;
 }
 
 .promotion__description {
-  background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/promotion_bg_img.jpg");
-  background-position: center;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-color: #5f5f5f;
   font-family: "Lato Regular", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
   margin: 0;
-  padding: 186px 61px 43px 58px;
   color: @white;
+}
+
+@media (min-width: @tablet-width) {
+  .promotion {
+    padding: 69px 0 76px 0;
+  }
+
+  .promotion__block {
+    background-size: 100%;
+    background-position: center 60%;
+    height: 200px;
+    position: relative;
+    padding: 0;
+  }
+
+  .promotion__description {
+    width: 161px;
+    position: absolute;
+    top: 71px;
+    right: 124px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .promotion {
+    padding: 0;
+  }
+
+  .promotion__block {
+    background-image: linear-gradient(to top, rgba(104, 183, 56, 0.90), rgba(104, 183, 56, 0.90)), url("../img/promotion_bg_img.jpg");
+    background-position: center;
+    background-size: 130%;
+    background-repeat: no-repeat;
+    background-color: #5f5f5f;
+    padding: 0;
+    height: auto;
+  }
+
+  .promotion__description {
+    width: 161px;
+    position: unset;
+    top: 0;
+    right: 0;
+    padding: 185px 43px 42px 41px;
+  }
 }
