--- a/source/less/blocks/radios.less
+++ b/source/less/blocks/radios.less
@@ -1,4 +1,4 @@
-.radios .form__list li:not(:last-child) {
+.radios li:not(:last-child) {
   padding-bottom: 25px;
 }
 
@@ -41,3 +41,35 @@
 .radios__input:checked + .radios__label::after {
   opacity: 1;
 }
+
+@media (min-width: @tablet-width) {
+  .radios li:not(:last-child) {
+    padding-bottom: 30px;
+  }
+
+  .radios__label {
+    font-size: 20px;
+    line-height: 21px;
+    padding-left: 60px;
+  }
+
+  .radios__input + .radios__label::before {
+    width: 40px;
+    height: 40px;
+    bottom: -10px;
+    left: 3px;
+  }
+
+  .radios__input + .radios__label::after {
+    width: 18px;
+    height: 18px;
+    left: 14px;
+    bottom: 1px;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+
+}
+
