--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,9 @@
+// Viewports
+
+@tablet-width: 768px;
+@desktop-width: 1440px;
+@mobile-width-only: 767px;
+
 //common
 @import "./fonts.less";
 @import "./blocks/page.less";
