--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -29,10 +29,6 @@
   padding-bottom: 29px;
 }
 
-.intro__img-tablet {
-  display: none;
-}
-
 .intro__button {
   margin: 0 20px;
   padding: 7px 44px;
@@ -69,12 +65,10 @@
   }
 
   .intro__img {
-    display: none;
-  }
-
-  .intro__img--tablet {
-    display: block;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    z-index: 0;
   }
 
   .intro__button {
@@ -105,7 +99,7 @@
     padding: 0 0 0 80px;
   }
 
-  .intro__img--tablet {
+  .intro__img {
     width: 552px;
     height: 499px;
     margin: 0;
