--- a/5/css/style.css
+++ b/5/css/style.css
@@ -455,9 +455,6 @@
   margin: 0;
   padding-bottom: 29px;
 }
-.intro__img-tablet {
-  display: none;
-}
 .intro__button {
   margin: 0 20px;
   padding: 7px 44px;
@@ -490,11 +487,10 @@
     padding: 0 0 20px 87px;
   }
   .intro__img {
-    display: none;
-  }
-  .intro__img--tablet {
-    display: block;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    z-index: 0;
   }
   .intro__button {
     position: absolute;
@@ -520,7 +516,7 @@
   .intro__description {
     padding: 0 0 0 80px;
   }
-  .intro__img--tablet {
+  .intro__img {
     width: 552px;
     height: 499px;
     margin: 0;
@@ -1096,19 +1092,13 @@
   .form__field-group--checkboxes .form__title {
     padding-bottom: 62px;
   }
-  .form__field-group--checkboxes .form__list {
-    display: grid;
-    grid-template-columns: 221px 221px;
-    column-gap: 123px;
-    row-gap: 32px;
-  }
   .form__submit-button {
-    width: 282px;
-    height: 52px;
-    padding: 13px 45px;
     font-size: 20px;
     line-height: 20px;
-    margin-right: 64px;
+    width: 568px;
+    height: 52px;
+    padding: 13px 188px;
+    margin-right: 84px;
   }
   .form__reqired-wrapper {
     display: flex;
@@ -1137,12 +1127,6 @@
   }
   .form__field-group--checkboxes {
     padding-bottom: 61px;
-  }
-  .form__submit-button {
-    width: 568px;
-    height: 52px;
-    padding: 13px 188px;
-    margin-right: 84px;
   }
 }
 .form-page__title {
