--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -57,6 +57,19 @@
     font-size: 18px;
     line-height: 24px;
   }
+
+  .main-nav__link--current {
+    position: relative;
+  }
+
+  .main-nav__link--current::before {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #68b738;
+    position: absolute;
+    bottom: -10px;
+  }
 }
 
 @media (min-width: @desktop-width) {
