--- a/5/css/style.css
+++ b/5/css/style.css
@@ -67,17 +67,6 @@
   .header__logo-text {
     padding-left: 12px;
   }
-  .main-nav__link--current {
-    position: relative;
-  }
-  .main-nav__link--current::before {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: #68b738;
-    position: absolute;
-    bottom: -10px;
-  }
 }
 @media (min-width: 1440px) {
   .header {
@@ -143,6 +132,17 @@
   .main-nav__link {
     font-size: 18px;
     line-height: 24px;
+  }
+  .main-nav__link--current {
+    position: relative;
+  }
+  .main-nav__link--current::before {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #68b738;
+    position: absolute;
+    bottom: -10px;
   }
 }
 @media (min-width: 1440px) {
@@ -310,22 +310,6 @@
   font-family: "Oswald Regular", sans-serif;
   font-weight: 400;
   border: none;
-}
-@media (min-width: 768px) {
-  .catalog {
-    padding: 0 30px;
-  }
-  .catalog__title {
-    font-size: 60px;
-    line-height: 60px;
-    margin: 0;
-    padding: 10px 0 82px 0;
-  }
-}
-@media (min-width: 1440px) {
-  .catalog {
-    padding: 0 110px;
-  }
 }
 .radios li:not(:last-child) {
   padding-bottom: 25px;
@@ -533,7 +517,7 @@
   background-color: #f2f2f2;
   padding: 30px 19px 22px 19px;
 }
-.programs__wrapper:first-child {
+.programs__wrapper:not(:last-child) {
   margin-bottom: 20px;
 }
 .programs__title {
@@ -571,6 +555,9 @@
     background-color: #f2f2f2;
     padding: 77px 316px 57px 52px;
   }
+  .programs__wrapper:not(:last-child) {
+    margin-bottom: 30px;
+  }
   .programs__title {
     font-size: 36px;
     line-height: 36px;
@@ -598,7 +585,7 @@
   .programs__wrapper {
     padding: 77px 61px 59px 52px;
   }
-  .programs__wrapper:first-child {
+  .programs__wrapper:not(:last-child) {
     margin-bottom: 0;
   }
   .programs__title {
