--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -10,8 +10,12 @@
 .header__nav-toogle {
   background: transparent;
   border: none;
+  width: 25px;
+  height: 20px;
   padding: 0;
   padding-top: 3px;
+  background-image: url(../img/burger-menu-mob.svg);
+  background-repeat: no-repeat;
 }
 
 @media (min-width: @tablet-width) {
