--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -53,6 +53,7 @@
     list-style-type: none;
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
     padding: 58px 30px 55px;
@@ -60,7 +61,7 @@
   }
 
   .page-footer__item:first-child {
-    padding: 0 155px 0 0;
+    padding: 0 146px 0 0;
   }
 
   .page-footer__item:not(:first-child):not(:last-child) {
