--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,22 +1,20 @@
 .page__body {
   background-color: #ffffff;
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
 }
 
 @media (min-width: @mobile-width-only) {
-  .page__body {
-    margin: 0 auto 0 auto;
-  }
 }
 
 @media (min-width: @tablet-width) {
   .page__body {
-    margin: 0 auto 0 auto;
+    width: 768px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page__body {
-    margin: 0 auto 0 auto;
+    width: 1440px;
   }
 }
