--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -12,6 +12,7 @@
 @media (min-width: @desktop-width) {
   .program-form {
     padding: 0 110px;
+    margin: 0 auto;
   }
 
   .program-form__wrapper {
