--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -3,11 +3,12 @@
 .intro {
   background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg-img.jpg");
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-position: right 40% bottom 53%;
+  background-size: 200%;
   background-color: #5f5f5f;
   font-family: "Oswald Regular", sans-serif;
   text-align: center;
+  margin-bottom: 138px;
 }
 
 .intro__title {
@@ -29,9 +30,8 @@
   padding-bottom: 29px;
 }
 
-.intro__button {
-  margin: 0 20px;
-  padding: 7px 44px;
+.intro__img {
+  margin-bottom: -140px;
 }
 
 @media (min-width: @tablet-width) {
@@ -42,6 +42,7 @@
     font-family: "Oswald Regular", sans-serif;
     text-align: start;
     padding: 0 30px;
+    margin: 0;
   }
 
   .intro__title {
@@ -70,18 +71,6 @@
     margin: 0;
     z-index: 0;
   }
-
-  .intro__button {
-    position: absolute;
-    box-sizing: border-box;
-    text-decoration: none;
-    top: 255px;
-    width: 244px;
-    margin: 0 0 0 90px;
-    padding: 14px 26px 14px 26px;
-    font-size: 20px;
-    line-height: 20px;
-  }
 }
 
 @media (min-width: @desktop-width) {
@@ -89,6 +78,11 @@
     display: flex;
     flex-direction: row;
     padding: 0 0 0 110px;
+    background-image: linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/intro-bg-img.jpg");
+    background-repeat: no-repeat;
+    background-position: right 40% bottom 53%;
+    background-size: 200%;
+    background-color: #5f5f5f;
   }
 
   .intro__title {
@@ -104,9 +98,5 @@
     height: 499px;
     margin: 0;
     z-index: 0;
-  }
-
-  .intro__button {
-    margin: 0 0 0 80px;
   }
 }
