--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,5 @@
 .main-nav {
-  display: none;
+  // display: none;
   position: fixed;
   left: 0;
   justify-content: center;
@@ -7,6 +7,14 @@
   background-color: @white;
   top: 65px;
   border-top: 1px solid #e6e6e6;
+}
+
+.main-nav--closed {
+  display: none;
+}
+
+.main-nav--opened {
+  display: block;
 }
 
 .main-nav__list {
@@ -18,6 +26,7 @@
 .main-nav__item {
   padding: 22px 0 24px 0;
   text-align: center;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .main-nav__link {
@@ -47,6 +56,7 @@
   .main-nav__item {
     padding: 0;
     padding-right: 35px;
+    border-bottom: none;
   }
 
   .main-nav__item:last-child {
