--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -28,7 +28,13 @@
 
 .partnership__adress-img {
   background-color: #7a7a7a;
+}
+
+.partnership iframe {
+  border: none;
+  display: block;
   width: 100%;
+  background-color: #7a7a7a;
 }
 
 @media (min-width: @tablet-width) {
@@ -51,6 +57,11 @@
     line-height: 20px;
     width: 160px;
     text-align: end;
+  }
+
+  .partnership iframe {
+    border: none;
+    display: block;
   }
 }
 
