--- a/source/less/blocks/products-extra.less
+++ b/source/less/blocks/products-extra.less
@@ -9,6 +9,11 @@
 
 .products-extra__card {
   padding: 13px 0 19px 0;
+  border-top: 1px solid #cdcdcd;
+}
+
+.products-extra__card:last-child {
+  border-bottom: 1px solid #cdcdcd;
 }
 
 .products-extra__list {
@@ -119,15 +124,16 @@
     padding-bottom: 86px;
   }
 
-  .products-extra__wrapper--desktop {
-    display: grid;
-    grid-template-columns: 895px 245px;
-    column-gap: 80px;
+  .products-extra__wrapper-desktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .products-extra__list {
+    width: 896px;
     margin: 0;
-    padding: 0;
+    padding: 0 80px 0 0;
     display: block;
   }
 
