--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -2,6 +2,13 @@
   padding: 20px;
 }
 
+.programs__button {
+  margin: 0 auto 20px auto;
+  padding: 7px 44px 7px 70px;
+  max-width: 280px;
+  box-sizing: border-box;
+}
+
 .programs__wrapper {
   background-color: #f2f2f2;
   padding: 30px 19px 22px 19px;
@@ -20,6 +27,29 @@
   padding-left: 72px;
   padding-bottom: 29px;
   text-transform: uppercase;
+  position: relative;
+}
+
+.programs__title--loss::before {
+  content: "";
+  background-image: url(../img/cat_back_loss.png);
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 0;
+  top: -5px;
+}
+
+.programs__title--gain::before {
+  content: "";
+  background-image: url(../img/cat_back_gain.png);
+  background-repeat: no-repeat;
+  width: 67px;
+  height: 50px;
+  left: -8px;
+  top: -5px;
+  position: absolute;
 }
 
 .programs__description {
@@ -29,6 +59,16 @@
   line-height: 18px;
   margin: 0;
   padding-bottom: 42px;
+  position: relative;
+}
+
+.programs__description::before {
+  content: "";
+  background-image: url(../img/programs__line-img.svg);
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  bottom: 20px;
 }
 
 .programs__catalog-link {
@@ -44,6 +84,18 @@
 @media (min-width: @tablet-width) {
   .programs {
     padding: 30px;
+  }
+
+  .programs__button {
+    position: absolute;
+    box-sizing: border-box;
+    text-decoration: none;
+    top: 370px;
+    width: 244px;
+    margin: 0 0 0 90px;
+    padding: 14px 30px 14px 38px;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .programs__wrapper {
@@ -62,11 +114,31 @@
     padding: 0 0 24px 0;
   }
 
+  .programs__title--loss::before {
+    background-image: url(../img/cat_back_loss--tab.png);
+    width: 200px;
+    height: 211px;
+    left: 394px;
+    top: 0;
+  }
+
+  .programs__title--gain::before {
+    background-image: url(../img/cat_back_gain--tab.png);
+    width: 268px;
+    height: 200px;
+    left: 360px;
+    top: 0;
+  }
+
   .programs__description {
     font-size: 16px;
     line-height: 24px;
     margin: 0;
     padding-bottom: 52px;
+  }
+
+  .programs__description::before {
+    content: none;
   }
 
   .programs__catalog-link {
@@ -78,9 +150,15 @@
 @media (min-width: @desktop-width) {
   .programs {
     padding: 82px 110px 72px;
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: 570px 570px;
+    grid-template-columns: 1fr 1fr;
     gap: 80px;
+  }
+
+  .programs__button {
+    margin: 0 0 0 80px;
+    top: 410px;
   }
 
   .programs__wrapper {
@@ -93,5 +171,21 @@
 
   .programs__title {
     padding: 0 0 73px 162px;
+  }
+
+  .programs__title--loss::before {
+    background-image: url(../img/cat_back_loss--desk.png);
+    width: 100px;
+    height: 106px;
+    left: 0;
+    top: -35px;
+  }
+
+  .programs__title--gain::before {
+    background-image: url(../img/cat_back_gain--desk.png);
+    width: 134px;
+    height: 200px;
+    left: -15px;
+    top: -35px;
   }
 }
