--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -32,7 +32,7 @@
 
 .advantages__description--nutrients::before {
   content: "";
-  background-image: url(../img/advantages__nutrients.png);
+  background-image: url("../img/advantages__nutrients.png");
   width: 60px;
   height: 60px;
   position: absolute;
@@ -42,7 +42,7 @@
 
 .advantages__description--consistency::before {
   content: "";
-  background-image: url(../img/advantages__consistency.png);
+  background-image: url("../img/advantages__consistency.png");
   width: 60px;
   height: 60px;
   position: absolute;
@@ -52,7 +52,7 @@
 
 .advantages__description--meal::before {
   content: "";
-  background-image: url(../img/advantages__meal.png);
+  background-image: url("../img/advantages__meal.png");
   width: 60px;
   height: 60px;
   position: absolute;
@@ -62,7 +62,7 @@
 
 .advantages__description--duration::before {
   content: "";
-  background-image: url(../img/advantages__duration.png);
+  background-image: url("../img/advantages__duration.png");
   width: 60px;
   height: 60px;
   position: absolute;
@@ -89,7 +89,7 @@
   }
 
   .advantages__item:first-child {
-    background-image: url(../img/advantages__number-1.png);
+    background-image: url("../img/advantages__number-1.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 23%;
     width: 230px;
@@ -98,7 +98,7 @@
   }
 
   .advantages__item:nth-child(2) {
-    background-image: url(../img/advantages__number-2.png);
+    background-image: url("../img/advantages__number-2.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 0%;
     width: 230px;
@@ -106,7 +106,7 @@
   }
 
   .advantages__item:nth-child(3) {
-    background-image: url(../img/advantages__number-3.png);
+    background-image: url("../img/advantages__number-3.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 0%;
     width: 230px;
@@ -114,7 +114,7 @@
   }
 
   .advantages__item:last-child {
-    background-image: url(../img/advantages__number-4.png);
+    background-image: url("../img/advantages__number-4.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 0%;
     width: 230px;
@@ -129,7 +129,7 @@
   }
 
   .advantages__description--nutrients::before {
-    background-image: url(../img/advantages__nutrients--desk.png);
+    background-image: url("../img/advantages__nutrients--desk.png");
     width: 80px;
     height: 80px;
     left: 0;
@@ -141,7 +141,7 @@
   }
 
   .advantages__description--consistency::before {
-    background-image: url(../img/advantages__consistency--desk.png);
+    background-image: url("../img/advantages__consistency--desk.png");
     width: 80px;
     height: 80px;
     left: 0;
@@ -149,7 +149,7 @@
   }
 
   .advantages__description--meal::before {
-    background-image: url(../img/advantages__meal--desk.png);
+    background-image: url("../img/advantages__meal--desk.png");
     width: 80px;
     height: 80px;
     left: 0;
@@ -161,7 +161,7 @@
   }
 
   .advantages__description--duration::before {
-    background-image: url(../img/advantages__duration--desk.png);
+    background-image: url("../img/advantages__duration--desk.png");
     width: 80px;
     height: 80px;
     left: 0;
@@ -185,7 +185,7 @@
   }
 
   .advantages__item:first-child {
-    background-image: url(../img/advantages__number-1.png);
+    background-image: url("../img/advantages__number-1.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 23%;
     width: 230px;
@@ -194,7 +194,7 @@
   }
 
   .advantages__item:nth-child(2) {
-    background-image: url(../img/advantages__number-2.png);
+    background-image: url("../img/advantages__number-2.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 0%;
     width: 230px;
@@ -202,7 +202,7 @@
   }
 
   .advantages__item:nth-child(3) {
-    background-image: url(../img/advantages__number-3.png);
+    background-image: url("../img/advantages__number-3.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 0%;
     width: 230px;
@@ -210,7 +210,7 @@
   }
 
   .advantages__item:last-child {
-    background-image: url(../img/advantages__number-4.png);
+    background-image: url("../img/advantages__number-4.png");
     background-repeat: no-repeat;
     background-position: bottom 10% right 0%;
     width: 230px;
