--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -14,7 +14,7 @@
   height: 20px;
   padding: 0;
   padding-top: 3px;
-  background-image: url(../img/burger-menu-mob.svg);
+  background-image: url("../img/burger-menu-mob.svg");
   background-repeat: no-repeat;
 }
 
