--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -32,7 +32,7 @@
 
 .programs__title--loss::before {
   content: "";
-  background-image: url(../img/cat_back_loss.png);
+  background-image: url("../img/cat_back_loss.png");
   background-repeat: no-repeat;
   width: 50px;
   height: 50px;
@@ -43,7 +43,7 @@
 
 .programs__title--gain::before {
   content: "";
-  background-image: url(../img/cat_back_gain.png);
+  background-image: url("../img/cat_back_gain.png");
   background-repeat: no-repeat;
   width: 67px;
   height: 50px;
@@ -64,7 +64,7 @@
 
 .programs__description::before {
   content: "";
-  background-image: url(../img/programs__line-img.svg);
+  background-image: url("../img/programs__line-img.svg");
   width: 100%;
   height: 1px;
   position: absolute;
@@ -115,7 +115,7 @@
   }
 
   .programs__title--loss::before {
-    background-image: url(../img/cat_back_loss--tab.png);
+    background-image: url("../img/cat_back_loss--tab.png");
     width: 200px;
     height: 211px;
     left: 394px;
@@ -123,7 +123,7 @@
   }
 
   .programs__title--gain::before {
-    background-image: url(../img/cat_back_gain--tab.png);
+    background-image: url("../img/cat_back_gain--tab.png");
     width: 268px;
     height: 200px;
     left: 360px;
@@ -174,7 +174,7 @@
   }
 
   .programs__title--loss::before {
-    background-image: url(../img/cat_back_loss--desk.png);
+    background-image: url("../img/cat_back_loss--desk.png");
     width: 100px;
     height: 106px;
     left: 0;
@@ -182,7 +182,7 @@
   }
 
   .programs__title--gain::before {
-    background-image: url(../img/cat_back_gain--desk.png);
+    background-image: url("../img/cat_back_gain--desk.png");
     width: 134px;
     height: 200px;
     left: -15px;
