--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -78,7 +78,7 @@
 
 .form__title--email-tel::before {
   content: "";
-  background-image: url(../img/title_line.png);
+  background-image: url("../img/title_line.png");
   height: 2px;
   width: 300px;
   position: absolute;
@@ -127,7 +127,7 @@
 
   &::before {
     content: "";
-    background-image: url(../img/title_line.png);
+    background-image: url("../img/title_line.png");
     height: 2px;
     width: 300px;
     position: absolute;
@@ -164,7 +164,7 @@
 
   &::before {
     content: "";
-    background-image: url(../img/title_line.png);
+    background-image: url("../img/title_line.png");
     height: 2px;
     width: 300px;
     position: absolute;
