--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -24,7 +24,7 @@
 
 .promotion__description::before {
   content: "";
-  background-image: url(../img/promotion__gift-icon.svg);
+  background-image: url("../img/promotion__gift-icon.svg");
   position: absolute;
   width: 78px;
   height: 80px;
@@ -53,7 +53,7 @@
   }
 
   .promotion__description::before {
-    background-image: url(../img/promotion__gift-icon.svg);
+    background-image: url("../img/promotion__gift-icon.svg");
     position: absolute;
     width: 80px;
     height: 82px;
@@ -68,8 +68,6 @@
   }
 
   .promotion__block {
-    background-image: linear-gradient(to top, rgba(104, 183, 56, 0.9), rgba(104, 183, 56, 0.9)), url("../img/promotion_bg_img.jpg");
-    background-position: center;
     background-size: 130%;
     background-repeat: no-repeat;
     background-color: #5f5f5f;
@@ -86,7 +84,7 @@
   }
 
   .promotion__description::before {
-    background-image: url(../img/promotion__gift-icon.svg);
+    background-image: url("../img/promotion__gift-icon.svg");
     width: 80px;
     height: 82px;
     top: 56px;
